--- a/index.html
+++ b/index.html
@@ -1,12 +1,360 @@
-<!DOCTYPE html>
+<!DOCTYPE HTML>
+<!--
+	Prologue by HTML5 UP
+	html5up.net | @ajlkn
+	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+-->
 <html lang="en">
-  <head>
-    <title></title>
-    <meta charset="utf-8"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- ... -->
-  </head>
-  <body>
-    <!-- ... -->
-  </body>
+	<head>
+		<title>Mattéo Clémot</title>
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="stylesheet" href="assets/css/academicons.css"/>
+		<link rel="icon" type="image/png" href="icon.png">
+		<meta name="google-site-verification" content="jF5OfacNB2JZC_Hu_n7r16kH0MJ389bfoOmB3W54x7o" />
+		<meta name="msvalidate.01" content="4AE68D734B15CEE171D57CAF896DF171" />
+		<meta name="robots" content="nofollow" />
+	</head>
+	<body class="is-preload">
+
+		<!-- Header -->
+			<div id="header">
+
+				<div class="top">
+
+					<!-- Logo -->
+						<div id="logo">
+							<a href="#home">
+								<span class="image"><img src="icon.png" alt="" width=64 height=64 /></span>
+								<h1 id="title">Mattéo Clémot</h1>
+								<p>PhD student in Computer Science</p>
+							</a>
+						</div>
+
+					<!-- Nav -->
+						<nav id="nav">
+							<ul>
+								<li><a href="#home" id="top-link"><span class="icon solid fa-home">Home</span></a></li>
+								<li><a href="#education" id="education-link"><span class="icon solid fa-graduation-cap">Education</span></a></li>
+								<li><a href="#publications" id="publications-link"><span class="icon solid fa-scroll">Publications</span></a></li>
+								<li><a href="#internships" id="internships-link"><span class="icon solid fa-microscope">Internships</span></a></li>
+								<!--<li><a href="#other" id="other-link"><span class="icon solid fa-box-open">Miscellaneous</span></a></li>-->
+								<!--<li><div style='background-color: #3a3a3a; min-height: 1px; margin-right: 10%; margin-left: 10%;'></div></li>-->
+								<!--<li><a href="teaching.html" id="other-link"><span class="icon solid fa-school">Teaching</span></a></li>-->
+								<li><div style='background-color: #3a3a3a; min-height: 1px; margin-right: 10%; margin-left: 10%;'></div></li>
+								<li><a href="glsl.html" id="code-link"><span class="icon solid fa-code">Fractals</span></a></li>
+								<li><a href="photo.html" id="photo-link"><span class="icon solid fa-camera">Pictures</span></a></li>
+							</ul>
+						</nav>
+
+				</div>
+
+				<div class="bottom">
+
+					<!-- Social Icons -->
+						<ul class="icons">
+							<li><a href="mailto:matteo.clemot@ens-lyon.fr" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+							<li><a href="https://github.com/MClemot" class="icon brands fa-github"><span class="label">Github</span></a></li>
+							<li><a href="https://orcid.org/0009-0000-2524-0244" class="icon brands fa-orcid"><span class="label">Orcid</span></a></li>
+						</ul>
+
+				</div>
+
+			</div>
+
+		<!-- Main -->
+			<div id="main">
+				<!-- Home -->
+					<section id="home" class="three" style="background-image: url('images/test.png'); background-repeat: no-repeat; background-size: cover;">
+						<div class="container">
+							<header>
+								<h2>Mattéo Clémot</h2>
+								<h3>PhD student in computer science </h3>
+							</header>
+							<p>I am a PhD student in topological data analysis at the Université Lyon 1.</p>
+							<footer>
+								<a href="Docs/CV.pdf" class="button scrolly">Curriculum vitæ</a>
+							</footer>
+						</div>	
+					</section>
+
+
+				<!-- Education -->
+					<section id="education" class="two">
+						<div class="container">
+
+							<header>
+								<h2>Education</h2>
+							</header>
+
+							<div class="table-wrapper">
+								<table>
+									<tr>
+										<td>2023–<wbr>2026</td>
+										<td><b>Ph.D. student in computer science</b> <br/>
+											<b><i>Dimensionality reduction under topological constraints</i></b> <br/>
+										    Supervised by Julie Digne (LIRIS) & Julien Tierny (LIP6) <br/>
+										    Part of the project <a href="https://erc-tori.github.io">TORI</a> 
+										</td>
+										<td class="responsive_logo"> <img src="images/LogoLyon1Sig_CoulCmjn300dpi.png" alt="" height = 75  /><br/> <img src="images/Logo_Sorbonne_Université.png" alt="" height = 60  /> </td>
+									</tr>
+									<tr>
+										<td>2019–<wbr>2022</td>
+										<td><b>Bachelor's and master's degree in fundamental computer science</b> <br> ENS de Lyon</td>
+										<td class="responsive_logo"> <img src="images/logo_ens.png" alt="" height = 50  /> </td>
+									</tr>
+									<!--<tr>
+										<td>2019–<wbr>2020</td>
+										<td><b>Bachelor's Degree in Mathematics</b> <br> Université Claude-Bernard-Lyon-I</td>
+										<td class="responsive_logo"> <img src="images/LogoLyon1Sig_CoulCmjn300dpi.png" alt="" height = 75  /> </td>
+									</tr>
+									<tr>
+										<td>2019–<wbr>2020</td>
+										<td><b>Bachelor's Degree in Fundamental Computer Science</b> <br> ENS de Lyon</td>
+										<td class="responsive_logo"> <img src="images/logo_ens.png" alt="" height = 50  /> </td>
+									</tr>
+									<tr>
+										<td>2018–<wbr>2019</td>
+										<td><b>First year of engineering school</b> <br> École des Ponts ParisTech</td>
+										<td class="responsive_logo"> <img src="images/7-ecole_ponts20_rvb_transparent.png" alt="" height = 100  /> </td>
+									</tr>-->
+									<tr>
+										<td>2016–<wbr>2018</td>
+										<td><b>Classe préparatoire aux grandes écoles, MPSI - MP*</b> <br> Lycée Condorcet, Paris</td>
+										<td class="responsive_logo"> <img src="images/condorcet.svg" alt="" height = 80  /> </td>
+									</tr>
+								</table>
+							</div>
+
+						</div>
+					</section>
+
+				<!-- Publications -->
+					<section id="publications" class="three">
+						<div class="container">
+
+							<header>
+								<h2>Publications</h2>
+							</header>
+
+							<div class="table-wrapper">
+								<table>
+									<tr>
+										<td class="responsive_logo"><img src="images/2502.20215v1.png" alt="" width=150 /></td>
+										<td>M. Clémot, J. Digne, J. Tierny, <b><i>Topological Autoencoders++: Fast and Accurate Cycle-Aware Dimensionality Reduction.</i></b> Preprint.<br>
+											<a href="https://arxiv.org/abs/2502.20215"><i class="ai ai-arxiv"></i> arXiv</a>&ensp;
+											<a href="https://github.com/MClemot/TopologicalAutoencodersPlusPlus"><span class="icon brands fa-github nowrap"> Code</span></a>&ensp;
+										</td>
+									</tr>
+									<tr>
+										<td class="responsive_logo"><img src="images/helice_alphaC.png" alt="" width=150 /></td>
+										<td>D. Attali, M. Clémot, B. B. Dornelas, and A. Lieutier, <b><i>When alpha-complexes collapse onto codimension-1 submanifolds</i></b>. Accepted at SOCG 2025.<br>
+											<a href="https://arxiv.org/abs/2411.10388"><i class="ai ai-arxiv"></i> arXiv</a>&ensp;
+											<a href="https://doi.org/10.4230/LIPIcs.SoCG.2025.11"><i class="ai ai-doi"></i></a>&ensp;
+										</td>
+									</tr>
+									<tr>
+										<td class="responsive_logo"><img src="images/teaser.png" alt="" width=150 /></td>
+										<td> M. Clémot and J. Digne, <b><i>Neural skeleton: implicit neural representation away from the surface</i></b>, Computer & Graphics, 2023. Presented at Shape Modeling International 2023 (IGS'23).<br>
+											<a href="https://hal.science/hal-04159959v1"><i class="ai ai-hal"></i> HAL</a>&ensp;
+											<a href="https://github.com/MClemot/SkeletonLearning"><span class="icon brands fa-github nowrap"> Code</span></a>&ensp;
+											<a href="https://www.replicabilitystamp.org/#https-github-com-mclemot-skeletonlearning"><i class="ai ai-grsi"></i> GRSI</a>&ensp;
+											<a href="Docs/Neural_Skeleton_2023_SMI_Slides.pdf"><span class="icon solid fa-file-pdf nowrap"> Slides</span></a>
+										</td>
+									</tr>
+								</table>
+							</div>
+
+						</div>
+					</section>
+
+				<!-- Internships -->
+					<section id="internships" class="two">
+						<div class="container">
+
+							<header>
+								<h2>Research internships</h2>
+							</header>
+
+							<div class="table-wrapper">
+								<table>
+									<tr>
+										<td style="text-align: right;" class="nowrap">Feb.–Apr.<br>2023<br><img src="images/sphere_grad.png" alt="" class="mobile_illu" /></td>
+										<td><b>Vector-field design on implicit SDFs</b> <br>
+											Supervised by Amir Vaxman<br>
+											<a href="https://web.inf.ed.ac.uk/ipab">Institute of Perception, Action and Behaviour</a>, <a href="https://www.ed.ac.uk/">The University of Edinburgh</a>
+										</td>
+										<td class="not-mobile"></td>
+										<td class="responsive_logo"><img src="images/sphere_grad.png" alt="" height=128 /></td>
+									</tr>
+									<tr>
+										<td style="text-align: right;" class="nowrap">Oct.–Dec.<br>2022<br><img src="images/schrodinger2.png" alt="" class="mobile_illu" /></td>
+										<td><b>Solving ill-posed inverse problems involving partial differential equations with neural networks</b> <br>
+											Supervised by Elisa Riccietti & Stefania Bellavia<br>
+											Team <a href="https://team.inria.fr/dante/fr/">DANTE</a>, <a href="http://www.ens-lyon.fr/LIP/">LIP</a>, Lyon<br>
+											<span class="only-mobile">
+												<a href="Docs/PLR1_Report.pdf"><span class="icon solid fa-file-pdf nowrap smol"> Report</span></a>&ensp;
+												<a href="Docs/PLR1_Slides.pdf"><span class="icon solid fa-file-pdf nowrap smol"> Slides</span></a>&ensp;
+											</span>
+										</td>
+										<td class="not-mobile">
+											<a href="Docs/PLR1_Report.pdf"><span class="icon solid fa-file-pdf nowrap smol"> Report</span></a><br>
+											<a href="Docs/PLR1_Slides.pdf"><span class="icon solid fa-file-pdf nowrap smol"> Slides</span></a><br>
+										</td>
+										<td class="responsive_logo"><img src="images/schrodinger2.png" alt="" height=128 /></td>
+									</tr>
+									<tr>
+										<td style="text-align: right;" class="nowrap">Feb.–July<br>2022<br><img src="images/hand_teaser.png" alt="" class="mobile_illu" /></td>
+										<td>
+											<b>Learning the topology of shapes given by point clouds</b><br>
+											Supervised by Julie Digne<br>
+											Team <a href="https://projet.liris.cnrs.fr/origami/">Origami</a>, <a href="https://liris.cnrs.fr/">LIRIS</a>, Lyon<br>
+											<span class="only-mobile">
+												<a href="Docs/Rapport_M2.pdf"><span class="icon solid fa-file-pdf nowrap smol"> Report</span></a>&ensp;
+												<a href="Docs/Soutenance_M2.pdf"><span class="icon solid fa-file-pdf nowrap smol"> Slides</span></a>&ensp;
+												<a href="https://github.com/MClemot/Skeleton"><span class="icon brands fa-github nowrap smol"> Code</span></a>
+											</span>
+										</td>
+										<td class="not-mobile">
+											<a href="Docs/Rapport_M2.pdf"><span class="icon solid fa-file-pdf nowrap smol"> Report</span></a><br>
+											<a href="Docs/Soutenance_M2.pdf"><span class="icon solid fa-file-pdf nowrap smol"> Slides</span></a><br>
+											<a href="https://github.com/MClemot/Skeleton"><span class="icon brands fa-github nowrap smol"> Code</span></a>
+										</td>
+										<td class="responsive_logo"><img src="images/hand_teaser.png" alt="" height=128 /></td>
+									</tr>
+									<tr>
+										<td style="text-align: right;" class="nowrap">Apr.–July<br>2021<br><img src="images/femur_manifold.png" alt="" class="mobile_illu" /></td>
+										<td>
+											<b>Surface reconstruction with Delaunay complexes</b><br>
+											Supervised by Dominique Attali<br>
+											Team <a href="https://www.gipsa-lab.grenoble-inp.fr/pole/pole-geometrie-apprentissage-information-et-algorithmes-gaia">GAIA</a>, <a href="https://www.gipsa-lab.grenoble-inp.fr/">GIPSA-lab</a>, Grenoble<br>
+											<span class="only-mobile">
+												<a href="Docs/Rapport_M1.pdf"><span class="icon solid fa-file-pdf nowrap smol"> Report</span></a>&ensp;
+												<a href="Docs/Soutenance_M1.pdf"><span class="icon solid fa-file-pdf nowrap smol"> Slides</span></a>&ensp;
+												<a href="https://github.com/MClemot/Reconstruction"><span class="icon brands fa-github nowrap smol"> Code</span></a>
+											</span>
+										</td>
+										<td class="not-mobile">
+											<a href="Docs/Rapport_M1.pdf"><span class="icon solid fa-file-pdf nowrap smol"> Report</span></a><br>
+											<a href="Docs/Soutenance_M1.pdf"><span class="icon solid fa-file-pdf nowrap smol"> Slides</span></a><br>
+											<a href="https://github.com/MClemot/Reconstruction"><span class="icon brands fa-github nowrap smol"> Code</span></a>
+										<td class="responsive_logo"><img src="images/femur_manifold.png" alt="" height=128 /></td>
+									</tr>
+									<tr>
+										<td style="text-align: right;" class="nowrap">June–July<br>2020<br><img src="images/polyhedron_illu.png" alt="" class="mobile_illu" /></td>
+										<td>
+											<b>Links between tropical linear programming, mean payoff games and parity games</b> <br>
+											Supervised by Stéphane Gaubert & Xavier Allamigeon<br>
+											Team <a href="https://team.inria.fr/tropical/">Tropical</a>, <a href="https://www.inria.fr/fr/centre-inria-de-saclay">INRIA Saclay</a> & <a href="https://portail.polytechnique.edu/cmap/fr/page-daccueil">CMAP</a> (École polytechnique), Palaiseau<br>
+											<span class="only-mobile">
+												<a href="Docs/Rapport_L3.pdf"><span class="icon solid fa-file-pdf nowrap smol"> Report</span></a>&ensp;
+												<a href="Docs/Soutenance_L3.pdf"><span class="icon solid fa-file-pdf nowrap smol"> Slides</span></a>
+											</span>
+										</td>
+										<td class="not-mobile">
+											<a href="Docs/Rapport_L3.pdf"><span class="icon solid fa-file-pdf nowrap smol"> Report</span></a><br>
+											<a href="Docs/Soutenance_L3.pdf"><span class="icon solid fa-file-pdf nowrap smol"> Slides</span></a><br>
+										</td>
+										<td class="responsive_logo"><img src="images/polyhedron_illu.png" alt="" height=128 /></td>
+									</tr>
+								</table>
+							</div>
+
+						</div>
+					</section>
+
+				<!-- Other works -->
+					<!--section id="other" class="three">
+						<div class="container">
+
+							<header>
+								<h2>Other</h2>
+							</header>
+
+							<h3>Other works</h3>
+
+							<div class="table-wrapper">
+								<table>
+									<tr>
+										<td class="nowrap">June 2019<br><img src="images/tree_graph_astar.png" alt="" class="mobile_illu" /></td>
+										<td>
+											TIPE pour le concours ENS <br>
+											<b>Algorithmique de la planification de mouvement</b><br>
+											<span class="only-mobile">
+												<a href="Docs/TIPE2.pdf"><span class="icon solid fa-file-pdf nowrap smol"> Report</span></a>&ensp;
+											<a href="Docs/TIPE2_Slides.pdf"><span class="icon solid fa-file-pdf nowrap smol"> Slides</span></a>
+											</span>
+										</td>
+										<td class="not-mobile">
+											<a href="Docs/TIPE2.pdf"><span class="icon solid fa-file-pdf nowrap smol"> Report</span></a><br>
+											<a href="Docs/TIPE2_Slides.pdf"><span class="icon solid fa-file-pdf nowrap smol"> Slides</span></a>
+										</td>
+										<td class="responsive_logo"><img src="images/tree_graph_astar.png" alt="" height=128 /></td>
+									</tr>
+									<tr>
+										<td class="nowrap">June 2018<br><img src="images/img_quadtree.png" alt="" class="mobile_illu" /></td>
+										<td>
+											TIPE pour le concours ENS <br>
+											<b>Simulation des systèmes gravitationnels et application à la cosmologie</b><br>
+											<span class="only-mobile">
+												<a href="Docs/TIPE1.pdf"><span class="icon solid fa-file-pdf nowrap smol"> Report</span></a>&ensp;
+												<a href="Docs/TIPE1_Slides.pdf"><span class="icon solid fa-file-pdf nowrap smol"> Slides</span></a>
+											</span>
+										</td>
+										<td class="not-mobile">
+											<a href="Docs/TIPE1.pdf"><span class="icon solid fa-file-pdf nowrap smol"> Report</span></a><br>
+											<a href="Docs/TIPE1_Slides.pdf"><span class="icon solid fa-file-pdf nowrap smol"> Slides</span></a>
+										</td>
+										<td class="responsive_logo"><img src="images/img_quadtree.png" alt="" height=128 /></td>
+									</tr>
+								</table>
+							</div>
+
+							<h3>Competitions</h3>		
+
+							<div class="table-wrapper">
+								<table>
+									<tr>
+										<td> Dec. 2022 </td>
+										<td> <a href="https://tracs.viarezo.fr/">TRACS</a> 2022 </td>
+										<td> <b>6/96</b> </td>
+									</tr>
+									<tr>
+										<td> Feb. 2022 </td>
+										<td> Google Hash Code 2022 </td>
+										<td> <b>611/9031</b></td>
+									</tr>
+									<tr>
+										<td> Dec. 2021 </td>
+										<td> <a href="https://tracs.viarezo.fr/">TRACS</a> 2021 </td>
+										<td> <b>7/94</b> </td>
+									</tr>
+								</table>
+							</div>
+						</div>
+					</section-->
+
+			</div>
+
+		<!-- Footer -->
+			<div id="footer">
+
+				<!-- Copyright -->
+					<ul class="copyright">
+						<li>&copy; Mattéo Clémot. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+					</ul>
+
+			</div>
+
+		<!-- Scripts -->
+			<script src="assets/js/jquery.min.js"></script>
+			<script src="assets/js/jquery.scrolly.min.js"></script>
+			<script src="assets/js/jquery.scrollex.min.js"></script>
+			<script src="assets/js/browser.min.js"></script>
+			<script src="assets/js/breakpoints.min.js"></script>
+			<script src="assets/js/util.js"></script>
+			<script src="assets/js/main.js"></script>
+
+	</body>
 </html>
