--- a/index.html
+++ b/index.html
@@ -150,13 +150,14 @@
 									<tr>
 										<td class="responsive_logo"><img src="images/helice_alphaC.png" alt="" width=150 /></td>
 										<td>D. Attali, M. Clémot, B. B. Dornelas, and A. Lieutier, <b><i>When alpha-complexes collapse onto codimension-1 submanifolds</i></b>. Accepted at SOCG 2025.<br>
+                                            <a href="https://doi.org/10.4230/LIPIcs.SoCG.2025.11"><i class="ai ai-doi"></i></a>&ensp;
 											<a href="https://arxiv.org/abs/2411.10388"><i class="ai ai-arxiv"></i> arXiv</a>&ensp;
-											<a href="https://doi.org/10.4230/LIPIcs.SoCG.2025.11"><i class="ai ai-doi"></i></a>&ensp;
 										</td>
 									</tr>
 									<tr>
 										<td class="responsive_logo"><img src="images/teaser.png" alt="" width=150 /></td>
-										<td> M. Clémot and J. Digne, <b><i>Neural skeleton: implicit neural representation away from the surface</i></b>, Computer & Graphics, 2023. Presented at Shape Modeling International 2023 (IGS'23).<br>
+										<td> M. Clémot and J. Digne, <b><i>Neural skeleton: implicit neural representation away from the surface</i></b>, Computer & Graphics, 2023. Presented at SMI 2023.<br>
+                                            <a href="https://doi.org/10.1016/j.cag.2023.06.012"><i class="ai ai-doi"></i></a>&ensp;
 											<a href="https://hal.science/hal-04159959v1"><i class="ai ai-hal"></i> HAL</a>&ensp;
 											<a href="https://github.com/MClemot/SkeletonLearning"><span class="icon brands fa-github nowrap"> Code</span></a>&ensp;
 											<a href="https://www.replicabilitystamp.org/#https-github-com-mclemot-skeletonlearning"><i class="ai ai-grsi"></i> GRSI</a>&ensp;
