--- a/photo.html
+++ b/photo.html
@@ -25,7 +25,7 @@
 							<a href="index.html">
 								<span class="image"><img src="icon.png" alt="" width=64 height=64 /></span>
 								<h1 id="title">Mattéo Clémot</h1>
-								<p>Student in Computer Science</p>
+								<p>PhD student in Computer Science</p>
 							</a>
 						</div>
 
