--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 							</header>
 							<p>I am a PhD student in topological data analysis at the Université Lyon 1.</p>
 							<footer>
-								<a href="Docs/CV.pdf" class="button scrolly">Curriculum vitæ</a>
+								<a href="docs/CV.pdf" class="button scrolly">Curriculum vitæ</a>
 							</footer>
 						</div>	
 					</section>
@@ -97,7 +97,7 @@
 										    Supervised by Julie Digne (LIRIS) & Julien Tierny (LIP6) <br/>
 										    Part of the project <a href="https://erc-tori.github.io">TORI</a> 
 										</td>
-										<td class="responsive_logo"> <img src="images/LogoLyon1Sig_CoulCmjn300dpi.png" alt="" height = 75  /><br/> <img src="images/Logo_Sorbonne_Université.png" alt="" height = 60  /> </td>
+										<td class="responsive_logo"> <img src="images/LogoLyon1Sig_CoulCmjn300dpi.png" alt="" height = 75  /><br/> <img src="images/Logo_Sorbonne.png" alt="" height = 60  /> </td>
 									</tr>
 									<tr>
 										<td>2019–<wbr>2022</td>
@@ -161,7 +161,7 @@
 											<a href="https://hal.science/hal-04159959v1"><i class="ai ai-hal"></i> HAL</a>&ensp;
 											<a href="https://github.com/MClemot/SkeletonLearning"><span class="icon brands fa-github nowrap"> Code</span></a>&ensp;
 											<a href="https://www.replicabilitystamp.org/#https-github-com-mclemot-skeletonlearning"><i class="ai ai-grsi"></i> GRSI</a>&ensp;
-											<a href="Docs/Neural_Skeleton_2023_SMI_Slides.pdf"><span class="icon solid fa-file-pdf nowrap"> Slides</span></a>
+											<a href="docs/Neural_Skeleton_2023_SMI_Slides.pdf"><span class="icon solid fa-file-pdf nowrap"> Slides</span></a>
 										</td>
 									</tr>
 								</table>
@@ -195,13 +195,13 @@
 											Supervised by Elisa Riccietti & Stefania Bellavia<br>
 											Team <a href="https://team.inria.fr/dante/fr/">DANTE</a>, <a href="http://www.ens-lyon.fr/LIP/">LIP</a>, Lyon<br>
 											<span class="only-mobile">
-												<a href="Docs/PLR1_Report.pdf"><span class="icon solid fa-file-pdf nowrap smol"> Report</span></a>&ensp;
-												<a href="Docs/PLR1_Slides.pdf"><span class="icon solid fa-file-pdf nowrap smol"> Slides</span></a>&ensp;
+												<a href="docs/PLR1_Report.pdf"><span class="icon solid fa-file-pdf nowrap smol"> Report</span></a>&ensp;
+												<a href="docs/PLR1_Slides.pdf"><span class="icon solid fa-file-pdf nowrap smol"> Slides</span></a>&ensp;
 											</span>
 										</td>
 										<td class="not-mobile">
-											<a href="Docs/PLR1_Report.pdf"><span class="icon solid fa-file-pdf nowrap smol"> Report</span></a><br>
-											<a href="Docs/PLR1_Slides.pdf"><span class="icon solid fa-file-pdf nowrap smol"> Slides</span></a><br>
+											<a href="docs/PLR1_Report.pdf"><span class="icon solid fa-file-pdf nowrap smol"> Report</span></a><br>
+											<a href="docs/PLR1_Slides.pdf"><span class="icon solid fa-file-pdf nowrap smol"> Slides</span></a><br>
 										</td>
 										<td class="responsive_logo"><img src="images/schrodinger2.png" alt="" height=128 /></td>
 									</tr>
@@ -212,14 +212,14 @@
 											Supervised by Julie Digne<br>
 											Team <a href="https://projet.liris.cnrs.fr/origami/">Origami</a>, <a href="https://liris.cnrs.fr/">LIRIS</a>, Lyon<br>
 											<span class="only-mobile">
-												<a href="Docs/Rapport_M2.pdf"><span class="icon solid fa-file-pdf nowrap smol"> Report</span></a>&ensp;
-												<a href="Docs/Soutenance_M2.pdf"><span class="icon solid fa-file-pdf nowrap smol"> Slides</span></a>&ensp;
+												<a href="docs/Rapport_M2.pdf"><span class="icon solid fa-file-pdf nowrap smol"> Report</span></a>&ensp;
+												<a href="docs/Soutenance_M2.pdf"><span class="icon solid fa-file-pdf nowrap smol"> Slides</span></a>&ensp;
 												<a href="https://github.com/MClemot/Skeleton"><span class="icon brands fa-github nowrap smol"> Code</span></a>
 											</span>
 										</td>
 										<td class="not-mobile">
-											<a href="Docs/Rapport_M2.pdf"><span class="icon solid fa-file-pdf nowrap smol"> Report</span></a><br>
-											<a href="Docs/Soutenance_M2.pdf"><span class="icon solid fa-file-pdf nowrap smol"> Slides</span></a><br>
+											<a href="docs/Rapport_M2.pdf"><span class="icon solid fa-file-pdf nowrap smol"> Report</span></a><br>
+											<a href="docs/Soutenance_M2.pdf"><span class="icon solid fa-file-pdf nowrap smol"> Slides</span></a><br>
 											<a href="https://github.com/MClemot/Skeleton"><span class="icon brands fa-github nowrap smol"> Code</span></a>
 										</td>
 										<td class="responsive_logo"><img src="images/hand_teaser.png" alt="" height=128 /></td>
@@ -231,14 +231,14 @@
 											Supervised by Dominique Attali<br>
 											Team <a href="https://www.gipsa-lab.grenoble-inp.fr/pole/pole-geometrie-apprentissage-information-et-algorithmes-gaia">GAIA</a>, <a href="https://www.gipsa-lab.grenoble-inp.fr/">GIPSA-lab</a>, Grenoble<br>
 											<span class="only-mobile">
-												<a href="Docs/Rapport_M1.pdf"><span class="icon solid fa-file-pdf nowrap smol"> Report</span></a>&ensp;
-												<a href="Docs/Soutenance_M1.pdf"><span class="icon solid fa-file-pdf nowrap smol"> Slides</span></a>&ensp;
+												<a href="docs/Rapport_M1.pdf"><span class="icon solid fa-file-pdf nowrap smol"> Report</span></a>&ensp;
+												<a href="docs/Soutenance_M1.pdf"><span class="icon solid fa-file-pdf nowrap smol"> Slides</span></a>&ensp;
 												<a href="https://github.com/MClemot/Reconstruction"><span class="icon brands fa-github nowrap smol"> Code</span></a>
 											</span>
 										</td>
 										<td class="not-mobile">
-											<a href="Docs/Rapport_M1.pdf"><span class="icon solid fa-file-pdf nowrap smol"> Report</span></a><br>
-											<a href="Docs/Soutenance_M1.pdf"><span class="icon solid fa-file-pdf nowrap smol"> Slides</span></a><br>
+											<a href="docs/Rapport_M1.pdf"><span class="icon solid fa-file-pdf nowrap smol"> Report</span></a><br>
+											<a href="docs/Soutenance_M1.pdf"><span class="icon solid fa-file-pdf nowrap smol"> Slides</span></a><br>
 											<a href="https://github.com/MClemot/Reconstruction"><span class="icon brands fa-github nowrap smol"> Code</span></a>
 										<td class="responsive_logo"><img src="images/femur_manifold.png" alt="" height=128 /></td>
 									</tr>
@@ -249,13 +249,13 @@
 											Supervised by Stéphane Gaubert & Xavier Allamigeon<br>
 											Team <a href="https://team.inria.fr/tropical/">Tropical</a>, <a href="https://www.inria.fr/fr/centre-inria-de-saclay">INRIA Saclay</a> & <a href="https://portail.polytechnique.edu/cmap/fr/page-daccueil">CMAP</a> (École polytechnique), Palaiseau<br>
 											<span class="only-mobile">
-												<a href="Docs/Rapport_L3.pdf"><span class="icon solid fa-file-pdf nowrap smol"> Report</span></a>&ensp;
-												<a href="Docs/Soutenance_L3.pdf"><span class="icon solid fa-file-pdf nowrap smol"> Slides</span></a>
+												<a href="docs/Rapport_L3.pdf"><span class="icon solid fa-file-pdf nowrap smol"> Report</span></a>&ensp;
+												<a href="docs/Soutenance_L3.pdf"><span class="icon solid fa-file-pdf nowrap smol"> Slides</span></a>
 											</span>
 										</td>
 										<td class="not-mobile">
-											<a href="Docs/Rapport_L3.pdf"><span class="icon solid fa-file-pdf nowrap smol"> Report</span></a><br>
-											<a href="Docs/Soutenance_L3.pdf"><span class="icon solid fa-file-pdf nowrap smol"> Slides</span></a><br>
+											<a href="docs/Rapport_L3.pdf"><span class="icon solid fa-file-pdf nowrap smol"> Report</span></a><br>
+											<a href="docs/Soutenance_L3.pdf"><span class="icon solid fa-file-pdf nowrap smol"> Slides</span></a><br>
 										</td>
 										<td class="responsive_logo"><img src="images/polyhedron_illu.png" alt="" height=128 /></td>
 									</tr>
@@ -283,13 +283,13 @@
 											TIPE pour le concours ENS <br>
 											<b>Algorithmique de la planification de mouvement</b><br>
 											<span class="only-mobile">
-												<a href="Docs/TIPE2.pdf"><span class="icon solid fa-file-pdf nowrap smol"> Report</span></a>&ensp;
-											<a href="Docs/TIPE2_Slides.pdf"><span class="icon solid fa-file-pdf nowrap smol"> Slides</span></a>
+												<a href="docs/TIPE2.pdf"><span class="icon solid fa-file-pdf nowrap smol"> Report</span></a>&ensp;
+											<a href="docs/TIPE2_Slides.pdf"><span class="icon solid fa-file-pdf nowrap smol"> Slides</span></a>
 											</span>
 										</td>
 										<td class="not-mobile">
-											<a href="Docs/TIPE2.pdf"><span class="icon solid fa-file-pdf nowrap smol"> Report</span></a><br>
-											<a href="Docs/TIPE2_Slides.pdf"><span class="icon solid fa-file-pdf nowrap smol"> Slides</span></a>
+											<a href="docs/TIPE2.pdf"><span class="icon solid fa-file-pdf nowrap smol"> Report</span></a><br>
+											<a href="docs/TIPE2_Slides.pdf"><span class="icon solid fa-file-pdf nowrap smol"> Slides</span></a>
 										</td>
 										<td class="responsive_logo"><img src="images/tree_graph_astar.png" alt="" height=128 /></td>
 									</tr>
@@ -299,13 +299,13 @@
 											TIPE pour le concours ENS <br>
 											<b>Simulation des systèmes gravitationnels et application à la cosmologie</b><br>
 											<span class="only-mobile">
-												<a href="Docs/TIPE1.pdf"><span class="icon solid fa-file-pdf nowrap smol"> Report</span></a>&ensp;
-												<a href="Docs/TIPE1_Slides.pdf"><span class="icon solid fa-file-pdf nowrap smol"> Slides</span></a>
+												<a href="docs/TIPE1.pdf"><span class="icon solid fa-file-pdf nowrap smol"> Report</span></a>&ensp;
+												<a href="docs/TIPE1_Slides.pdf"><span class="icon solid fa-file-pdf nowrap smol"> Slides</span></a>
 											</span>
 										</td>
 										<td class="not-mobile">
-											<a href="Docs/TIPE1.pdf"><span class="icon solid fa-file-pdf nowrap smol"> Report</span></a><br>
-											<a href="Docs/TIPE1_Slides.pdf"><span class="icon solid fa-file-pdf nowrap smol"> Slides</span></a>
+											<a href="docs/TIPE1.pdf"><span class="icon solid fa-file-pdf nowrap smol"> Report</span></a><br>
+											<a href="docs/TIPE1_Slides.pdf"><span class="icon solid fa-file-pdf nowrap smol"> Slides</span></a>
 										</td>
 										<td class="responsive_logo"><img src="images/img_quadtree.png" alt="" height=128 /></td>
 									</tr>
