--- a/quaternion.html
+++ b/quaternion.html
@@ -115,9 +115,7 @@
 			<script src="assets/js/util.js"></script>
 			<script src="assets/js/main.js"></script>
 
-			<script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
-			<script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>		
-
+			<script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@4/tex-mml-chtml.js"></script>
 			<script src="three.min.js"></script>
 	        <script src="fractals/loadShader.js"></script>
 	        <script src="fractals/quaternion.js"></script>
